feat(admin): Add external application registration and API keys (#1940)
